--- a/style.css
+++ b/style.css
@@ -38,6 +38,17 @@ body{
  padding: 14px;
 }
 
+.FrontPicture {
+	background-color: lightblue;
+	background-image: url('Fahrradbild_schlechte_Auflösung.png');
+	background-repeat: no-repeat;
+  background-size: cover;
+	background-position: center;
+  color: black;
+  padding: 200px;
+  text-align: center;
+}
+
 #footer{
  text-align: center;
  color: gray;
