--- a/style.css
+++ b/style.css
@@ -1,44 +1,98 @@
+html{
+    font-family: Arial, Helvectia, sans-serif;
+}
+
 body{
- font-family: Arial, Helvectia, sans-serif;
- margin: 0px;
+  font-family: Arial, Helvectia, sans-serif;
+  margin: 0px;
 }
 
-#top {
- text-align: center;
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
 }
 
-#logo{
- color: white;
- background-color: rgb(211, 70, 94);
- display: inline-block;
- font-size: 32px;
- font-weight: bold;
- padding: 8px;
- margin-top: 14px;
+.nav a{
+  color: black;
+  font-weight: bold;
+  display: table-cell;
+  vertical-align: middle;
+  text-decoration: none;
 }
 
-#logo-name{
- font-size: 32px;
- font-weight: bold;
- margin: 14px;
+.nav a:hover {
+  color: white;
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
-#navigation a{
-  color: gray;
-  padding: 8px;
+.navigation {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  background-color: grey;
 }
 
-#navigation a:hover {
-  color: rgb(211, 70, 94);
+.nav {
+  display: inline-block;
+  list-style-type: none;
+  margin: 10 auto 10 auto;
+  padding-left: 10px ;
+  padding-right: 10px ;
+  background-color: grey;
+}
+
+.logo_klein {
+  width: 65px;
 }
 
 #main{
- max-width: 800px;
- margin: auto;
+ margin: 10 auto 10 auto;
  padding: 14px;
+ text-align: center;
 }
 
-#footer{
+.FrontPicture {
+	background-color: lightblue;
+	background-image: url('Fahrradbild_schlechte_Auflösung.png');
+	background-repeat: no-repeat;
+  background-size: cover;
+	background-position: center;
+  color: black;
+  padding: 200px;
+  text-align: center;
+}
+
+.productbutton{
+  text-align: center; /*Hierdurch wird der Button zentriert*/
+}
+/**************************************************************/
+button {
+  background-color: #0B9BCB;
+  font-size: 18px;
+  font-weight: bolder;
+  color: white;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 5px 30px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 10px 15px 10px -7px black;
+
+  transition: ease-in-out all 300ms; /*Hier wird die Geschwindigkeit des Buttons geregelt*/
+}
+
+button:hover {
+  background-color: white;
+  color: #0B9BCB;
+  border: solid 3px #0B9BCB;
+
+  transform: translate(0px, -10px);
+  box-shadow: 0px 30px 10px -10px grey;
+}
+
+#copyright{
  text-align: center;
  color: gray;
  padding: 14px;
