--- a/style.css
+++ b/style.css
@@ -43,8 +43,14 @@ body{
   background-color: grey;
 }
 
+
+
 .logo_klein {
   width: 65px;
+}
+
+.logo_home {
+
 }
 
 #main{
@@ -64,10 +70,12 @@ body{
   text-align: center;
 }
 
+
+
 .productbutton{
   text-align: center; /*Hierdurch wird der Button zentriert*/
 }
-/**************************************************************/
+
 button {
   background-color: #0B9BCB;
   font-size: 18px;
@@ -90,6 +98,34 @@ button:hover {
 
   transform: translate(0px, -10px);
   box-shadow: 0px 30px 10px -10px grey;
+}
+
+.benefits {
+  background-color: purple;
+  padding: 5em 1em 5em 1em;
+}
+
+.environment {
+  background-color: red;
+  width: 100%;
+}
+
+.environment_text{
+  /*display: flex;*/
+  align-items: center;
+  justify-content: center;
+  background-color: green;
+}
+
+.environment_pic{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.logo_home{ /*Hier wird die Größe der Benefit Logos bestimmt*/
+  width: 50%;
 }
 
 #copyright{
