--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
+* {
+  box-sizing:border-box;
+}
+
 html{
     font-family: Arial, Helvectia, sans-serif;
 }
 
-body{
-  font-family: Arial, Helvectia, sans-serif;
-  margin: 0px;
+html, body {
+    height: 100%;
+}
+
+body {background-color: white;
+			margin: 0;
+			font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -14,7 +22,7 @@ body{
 }
 
 .nav a{
-  color: black;
+  color: white;
   font-weight: bold;
   display: table-cell;
   vertical-align: middle;
@@ -22,7 +30,7 @@ body{
 }
 
 .nav a:hover {
-  color: white;
+  color: black;
   font-weight: bolder;
   text-decoration: underline;
 }
@@ -31,7 +39,7 @@ body{
   width: 100%;
   text-align: center;
   display: inline-block;
-  background-color: grey;
+  background-color: #86D414;
 }
 
 .nav {
@@ -40,7 +48,7 @@ body{
   margin: 10 auto 10 auto;
   padding-left: 10px ;
   padding-right: 10px ;
-  background-color: grey;
+  /*background-color: grey;*/
 }
 
 
@@ -55,21 +63,103 @@ body{
 
 #main{
  margin: 10 auto 10 auto;
- padding: 14px;
  text-align: center;
 }
 
-.FrontPicture {
-	background-color: lightblue;
-	background-image: url('Fahrradbild_schlechte_Auflösung.png');
+/*Das große Bild am Anfang der Produktseite */
+.FrontPicture-Startseite {
+  background-color: lightblue;
+	background-image: url('logo1.png');
+	height: 50%;
 	background-repeat: no-repeat;
   background-size: cover;
 	background-position: center;
+	position: relative;
+  padding: 250px;
+}
+
+/* Der Text mittig auf dem FrontPicture Produktseite*/
+.FrontPicture-Text-Startseite {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: black;
-  padding: 200px;
+}
+
+/*Das große Bild am Anfang der Produktseite */
+.FrontPicture-Produktseite {
+  background-color: lightblue;
+	background-image: url('Fahrradbild_schlechte_Auflösung.png');
+	height: 50%;
+	background-repeat: no-repeat;
+  background-size: cover;
+	background-position: center;
+	position: relative;
+  padding: 250px;
+}
+
+/* Der Text mittig auf dem FrontPicture Produktseite*/
+.FrontPicture-Text-Produktseite {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+/* Der Balken zwischen den einzelnen Abschnitten */
+.separator{
+	background-color: #77A1D9;
+	background-size: cover;
+	background-position: center;
+  color: white;
+  padding: 30px;
   text-align: center;
 }
 
+/* Erster Container mit 2 Spalten links Bild rechts Text*/
+.container-1{
+	padding: 64px;
+	background-color: white;
+}
+
+/* Zweiter Container mit 2 Spalten links Text rechts Bild */
+.container-2{
+	padding: 64px;
+	background-color: #BDD9F2;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both
+}
+
+.column-50 {
+  float: left;
+  width: 50%;
+  padding: 20px;
+}
+
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+/* Responsive Layout für die Columns wenn Bildschirm kleiner als 768px*/
+@media screen and (max-width: 768px) {
+  .column-50,
+  .column-50 {
+    width: 100%;
+    text-align: center;
+  }
+  img {
+    margin: auto;
+  }
+}
 
 
 .productbutton{
@@ -77,7 +167,7 @@ body{
 }
 
 button {
-  background-color: #0B9BCB;
+  background-color: #86D414;
   font-size: 18px;
   font-weight: bolder;
   color: white;
@@ -100,29 +190,6 @@ button:hover {
   box-shadow: 0px 30px 10px -10px grey;
 }
 
-.benefits {
-  background-color: purple;
-  padding: 5em 1em 5em 1em;
-}
-
-.environment {
-  background-color: red;
-  width: 100%;
-}
-
-.environment_text{
-  /*display: flex;*/
-  align-items: center;
-  justify-content: center;
-  background-color: green;
-}
-
-.environment_pic{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
 
 .logo_home{ /*Hier wird die Größe der Benefit Logos bestimmt*/
   width: 50%;
