--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
     * {
         box-sizing: border-box;
     }
-    
+
     html {
         font-family: Arial, Helvectia, sans-serif;
     }
-    
+
     html,
     body {
         height: 100%;
     }
-    
+
     body {
         background-color: white;
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
     }
-    
+
     .wrapper {
         width: 100%;
         margin: 0 auto;
     }
-    
+
     .nav a {
         color: white;
         font-weight: bold;
@@ -29,20 +29,20 @@
         vertical-align: middle;
         text-decoration: none;
     }
-    
+
     .nav a:hover {
         color: black;
         font-weight: bolder;
         text-decoration: underline;
     }
-    
+
     .navigation {
         width: 100%;
         text-align: center;
         display: inline-block;
         background-color: #86D414;
     }
-    
+
     .nav {
         display: inline-block;
         list-style-type: none;
@@ -51,7 +51,7 @@
         padding-right: 10px;
         /*background-color: grey;*/
     }
-    
+
     .logo_klein {
         width: 65px;
     }
@@ -65,7 +65,7 @@
 }
 
 /*Das große Bild am Anfang der Produktseite */
-    
+
     .FrontPicture-Startseite {
         background-color: lightblue;
         background-image: url('logo1.png');
@@ -77,7 +77,7 @@
         padding: 250px;
     }
     /* Der Text mittig auf dem FrontPicture Produktseite*/
-    
+
     .FrontPicture-Text-Startseite {
         text-align: center;
         position: absolute;
@@ -87,7 +87,7 @@
         color: black;
     }
     /*Das große Bild am Anfang der Produktseite */
-    
+
     .FrontPicture-Produktseite {
         background-color: lightblue;
         background-image: url('Fahrradbild_schlechte_Auflösung.png');
@@ -97,9 +97,10 @@
         background-position: center;
         position: relative;
         padding: 250px;
+        background-attachment: fixed;
     }
     /* Der Text mittig auf dem FrontPicture Produktseite*/
-    
+
     .FrontPicture-Text-Produktseite {
         text-align: center;
         position: absolute;
@@ -109,7 +110,7 @@
         color: white;
     }
     /* Der Balken zwischen den einzelnen Abschnitten */
-    
+
     .separator {
         background-color: #77A1D9;
         background-size: cover;
@@ -117,45 +118,46 @@
         color: white;
         padding: 30px;
         text-align: center;
+        margin: 0;
     }
     /* Erster Container mit 2 Spalten links Bild rechts Text*/
-    
+
     .container-1 {
         padding: 64px;
         background-color: white;
     }
     /* Zweiter Container mit 2 Spalten links Text rechts Bild */
-    
+
     .container-2 {
         padding: 64px;
         background-color: #BDD9F2;
     }
-    
+
     .row:after {
         content: "";
         display: table;
         clear: both
     }
-    
+
     .column-50-left {
         float: left;
         width: 50%;
         padding: 20px;
     }
-    
+
     .column-50-right {
         float: right;
         width: 50%;
         padding: 20px;
     }
-    
+
     img {
         display: block;
         height: auto;
         max-width: 100%;
     }
     /* Responsive Layout für die Columns wenn Bildschirm kleiner als 768px*/
-    
+
     @media screen and (max-width: 768px) {
         .column-50-left,
         .column-50-right {
@@ -167,7 +169,7 @@
         }
     }
     /* Responsive Layout für die Columns wenn Bildschirm größer als 2000px*/
-    
+
     @media screen and (min-width: 2000px) {
         main,
         footer,
@@ -182,12 +184,12 @@
             width: 50%;
         }
     }
-    
+
     .productbutton {
         text-align: center;
         /*Hierdurch wird der Button zentriert*/
     }
-    
+
     button {
         background-color: #86D414;
         font-size: 18px;
@@ -202,7 +204,7 @@
         transition: ease-in-out all 300ms;
         /*Hier wird die Geschwindigkeit des Buttons geregelt*/
     }
-    
+
     button:hover {
         background-color: white;
         color: #0B9BCB;
@@ -210,12 +212,12 @@
         transform: translate(0px, -10px);
         box-shadow: 0px 30px 10px -10px grey;
     }
-    
+
     .logo_home {
         /*Hier wird die Größe der Benefit Logos bestimmt*/
         width: 50%;
     }
-    
+
     #copyright {
         text-align: center;
         color: gray;
