--- a/style.css
+++ b/style.css
@@ -1,60 +1,61 @@
     * {
-        box-sizing: border-box;
+      box-sizing: border-box;
     }
 
     html {
-        font-family: Arial, Helvectia, sans-serif;
+      font-family: Arial, Helvectia, sans-serif;
     }
 
     html,
     body {
-        height: 100%;
+      height: 100%;
     }
 
     body {
-        background-color: white;
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
+      background-color: white;
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     .wrapper {
-        width: 100%;
-        margin: 0 auto;
+      width: 100%;
+      margin: 0 auto;
     }
 
     .nav a {
-        color: white;
-        font-weight: bold;
-        display: table-cell;
-        vertical-align: middle;
-        text-decoration: none;
+      color: white;
+      font-weight: bold;
+      display: table-cell;
+      vertical-align: middle;
+      text-decoration: none;
     }
 
     .nav a:hover {
-        color: black;
-        font-weight: bolder;
-        text-decoration: underline;
+      color: black;
+      font-weight: bolder;
+      text-decoration: underline;
     }
 
     .navigation {
-        width: 100%;
-        text-align: center;
-        display: inline-block;
-        background-color: #86D414;
+      width: 100%;
+      text-align: center;
+      display: inline-block;
+      background-color: #86D414;
     }
 
     .nav {
-        display: inline-block;
-        list-style-type: none;
-        margin: 10 auto 10 auto;
-        padding-left: 10px;
-        padding-right: 10px;
-        /*background-color: grey;*/
+      display: inline-block;
+      list-style-type: none;
+      margin: 10 auto 10 auto;
+      padding-left: 10px;
+      padding-right: 10px;
+      /*background-color: grey;*/
     }
 
     .logo_klein {
-        width: 65px;
+      width: 65px;
     }
+
     /* .logo_home {
 
 }
@@ -65,161 +66,194 @@
 }
 
 /*Das große Bild am Anfang der Produktseite */
-
     .FrontPicture-Startseite {
-        background-color: lightblue;
-        background-image: url('logo1.png');
-        height: 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        padding: 250px;
+      background-color: lightblue;
+      background-image: url('logo1.png');
+      height: 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      padding: 250px;
     }
-    /* Der Text mittig auf dem FrontPicture Produktseite*/
 
+    /* Der Text mittig auf dem FrontPicture Produktseite*/
     .FrontPicture-Text-Startseite {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: black;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: black;
     }
+
     /*Das große Bild am Anfang der Produktseite */
-
     .FrontPicture-Produktseite {
-        background-color: lightblue;
-        background-image: url('Fahrradbild_schlechte_Auflösung.png');
-        height: 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        padding: 250px;
-        background-attachment: fixed;
+      background-color: lightblue;
+      background-image: url('Fahrradbild_schlechte_Auflösung.png');
+      height: 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      padding: 250px;
+      background-attachment: fixed;
     }
+
     /* Der Text mittig auf dem FrontPicture Produktseite*/
-
     .FrontPicture-Text-Produktseite {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
     }
+
     /* Der Balken zwischen den einzelnen Abschnitten */
-
     .separator {
-        background-color: #77A1D9;
-        background-size: cover;
-        background-position: center;
-        color: white;
-        padding: 30px;
-        text-align: center;
-        margin: 0;
+      background-color: #77A1D9;
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 30px;
+      text-align: center;
+      margin: 0;
     }
+
     /* Erster Container mit 2 Spalten links Bild rechts Text*/
-
     .container-1 {
-        padding: 64px;
-        background-color: white;
+      padding: 64px;
+      background-color: white;
     }
-    /* Zweiter Container mit 2 Spalten links Text rechts Bild */
 
+    /* Zweiter Container mit 2 Spalten links Text rechts Bild */
     .container-2 {
-        padding: 64px;
-        background-color: #BDD9F2;
+      padding: 64px;
+      background-color: #BDD9F2;
     }
 
     .row:after {
-        content: "";
-        display: table;
-        clear: both
+      content: "";
+      display: table;
+      clear: both
     }
 
     .column-50-left {
-        float: left;
-        width: 50%;
-        padding: 20px;
+      float: left;
+      width: 50%;
+      padding: 20px;
     }
 
     .column-50-right {
-        float: right;
-        width: 50%;
-        padding: 20px;
+      float: right;
+      width: 50%;
+      padding: 20px;
+    }
+
+    .column-footer-left {
+      float: left;
+      width: 33.33%;
+      text-align: left;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    .column-footer-middle {
+      float: left;
+      width: 33.33%;
+      text-align: center;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    .column-footer-right {
+      float: left;
+      width: 33.33%;
+      text-align: right;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
 
     img {
-        display: block;
-        height: auto;
-        max-width: 100%;
+      display: block;
+      height: auto;
+      max-width: 100%;
     }
+
     /* Responsive Layout für die Columns wenn Bildschirm kleiner als 768px*/
-
     @media screen and (max-width: 768px) {
-        .column-50-left,
-        .column-50-right {
-            width: 100%;
-            text-align: center;
-        }
-        img {
-            margin: auto;
-        }
-    }
-    /* Responsive Layout für die Columns wenn Bildschirm größer als 2000px*/
 
+      .column-50-left,
+      .column-50-right,
+      .column-footer-left,
+      .column-footer-middle,
+      .column-footer-right {
+        width: 100%;
+        text-align: center;
+      }
+
+      img {
+        margin: auto;
+      }
+    }
+
+    /* Responsive Layout für die Columns wenn Bildschirm größer als 2000px*/
     @media screen and (min-width: 2000px) {
-        main,
-        footer,
+
+      main,
+      footer,
         {
-            width: 100%;
-            display: grid;
-            justify-content: center;
-            align-items: center;
-        }
-        .column-50-left,
-        .column-50-right {
-            width: 50%;
-        }
+        width: 100%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .column-50-left,
+      .column-50-right,
+      .column-footer-left,
+      .column-footer-middle,
+      .column-footer-right {
+        width: 50%;
+      }
     }
 
     .productbutton {
-        text-align: center;
-        /*Hierdurch wird der Button zentriert*/
+      text-align: center;
+      /*Hierdurch wird der Button zentriert*/
     }
 
     button {
-        background-color: #86D414;
-        font-size: 18px;
-        font-weight: bolder;
-        color: white;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        padding: 5px 30px;
-        border-radius: 5px;
-        border: none;
-        box-shadow: 10px 15px 10px -7px black;
-        transition: ease-in-out all 300ms;
-        /*Hier wird die Geschwindigkeit des Buttons geregelt*/
+      background-color: #86D414;
+      font-size: 18px;
+      font-weight: bolder;
+      color: white;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      padding: 5px 30px;
+      border-radius: 5px;
+      border: none;
+      box-shadow: 10px 15px 10px -7px black;
+      transition: ease-in-out all 300ms;
+      /*Hier wird die Geschwindigkeit des Buttons geregelt*/
     }
 
     button:hover {
-        background-color: white;
-        color: #0B9BCB;
-        border: solid 3px #0B9BCB;
-        transform: translate(0px, -10px);
-        box-shadow: 0px 30px 10px -10px grey;
+      background-color: white;
+      color: #0B9BCB;
+      border: solid 3px #0B9BCB;
+      transform: translate(0px, -10px);
+      box-shadow: 0px 30px 10px -10px grey;
     }
 
     .logo_home {
-        /*Hier wird die Größe der Benefit Logos bestimmt*/
-        width: 50%;
-    }
-
-    #copyright {
-        text-align: center;
-        color: gray;
-        padding: 14px;
+      /*Hier wird die Größe der Benefit Logos bestimmt*/
+      width: 50%;
     }
