--- a/style.css
+++ b/style.css
@@ -123,13 +123,19 @@
 
     /* Erster Container mit 2 Spalten links Bild rechts Text*/
     .container-1 {
-      padding: 64px;
+      padding-left: : 64px;
+      padding-right: 64px;
+      padding-top: 30px;
+      padding-bottom: 30px;
       background-color: white;
     }
 
     /* Zweiter Container mit 2 Spalten links Text rechts Bild */
     .container-2 {
-      padding: 64px;
+      padding-left: : 64px;
+      padding-right: 64px;
+      padding-top: 30px;
+      padding-bottom: 30px;
       background-color: #BDD9F2;
     }
 
@@ -201,6 +207,14 @@
 
       img {
         margin: auto;
+      }
+
+      .container-1,
+      .container-2{
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 1px;
+        padding-bottom: 1px;
       }
     }
 
