--- a/style.css
+++ b/style.css
@@ -30,38 +30,116 @@
       margin: 0 auto;
     }
 
-    .navigation {
-      width: 100%;
+    /*navnavnanvnavnavnav__Anfang des Sytles der Navigationsleiste___navnavnanvnavnavnavnavnavnanvnavnavnav*/
+    .topnav img {
+      height: 20px;
+    }
+
+    .topnav {
+      overflow: hidden;
+      background-color: green;
+      margin: 0px auto;
+    }
+
+    .topnav a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
       text-align: center;
-      display: inline-block;
-      background-color: #86D414;
-    }
-
-    .nav {
-      display: inline-block;
-      list-style-type: none;
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-
-    .nav a {
-      color: white;
-      font-weight: bold;
-      display: table-cell;
-      vertical-align: middle;
+      padding: 14px 16px;
       text-decoration: none;
+      font-size: 17px;
     }
 
-    .nav a:hover {
+    .active {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    .topnav .icon {
+      display: none;
+    }
+
+    .dropdown {
+      float: left;
+      overflow: hidden;
+    }
+
+    .dropdown .dropbtn {
+      font-size: 17px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      float: none;
       color: black;
-      font-weight: bolder;
-      text-decoration: underline;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
     }
 
-    .logo_klein {
-      /*Hierbei handelt es sich um das Logo in der Navigationsleiste*/
-      width: 65px;
+    .topnav a:hover, .dropdown:hover .dropbtn {
+      background-color: #555;
+      color: white;
     }
+
+    .dropdown-content a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    @media screen and (max-width: 600px) {
+      .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+      }
+      .topnav a.icon {
+        float: right;
+        display: block;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {position: relative;}
+      .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+      .topnav.responsive .dropdown {float: none;}
+      .topnav.responsive .dropdown-content {position: relative;}
+      .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+    }
+
+    /*navnavnanvnavnavnav__Ende des Styles der Navigationsleiste___navnavnanvnavnavnavnavnavnanvnavnavnav*/
 
     /*Das große Bild am Anfang der Produktseite */
     .FrontPicture-Startseite {
@@ -513,9 +591,10 @@
 
     /* Responsive layout - when the screen is less than 768px wide, make the
 	navigation links stack on top of each other instead of next to each other */
-    @media screen and (max-width: 768px) {
+/*    @media screen and (max-width: 768px) {
       .navbar a {
         float: none;
         width: 100%;
       }
     }
+    Wird meiner Meinung nach nicht mehr benötigt Rampp, 30. November 2020, 20:39*/ 
