--- a/style.css
+++ b/style.css
@@ -434,37 +434,6 @@
       background-color: #86D414;
     }
 
-    /*Das große Bild am Anfang der Seite */
-    .FrontPicture {
-      background-color: lightblue;
-      background-image: url('Adobe_Bild.png');
-      height: 50%;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      padding: 200px;
-    }
-
-    /* Der Text mittig auf dem FrontPicture*/
-    .FrontPicture-Text {
-      text-align: center;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-    }
-
-    .Inhaltstrenner {
-      background-color: #77A1D9;
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 30px;
-      text-align: center;
-      margin-bottom: 0px;
-    }
 
     .product-data {
       padding: 55px;
@@ -484,8 +453,12 @@
       font-family: arial;
     }
 
-    .b-white {
-      background-color: white !important;
+    /* Zweiter Container mit Produktdaten */
+    .container-technische-daten {
+      padding: 10px 20px 10px 20px;
+      background-color: white;
+      margin: auto;
+      font-family: arial;
     }
 
     .row:after {
@@ -597,4 +570,4 @@
         width: 100%;
       }
     }
-    Wird meiner Meinung nach nicht mehr benötigt Rampp, 30. November 2020, 20:39*/ 
+    Wird meiner Meinung nach nicht mehr benötigt Rampp, 30. November 2020, 20:39*/
