Padding bei Frontpictures in Prozent geändert

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
       background-size: cover;
       background-position: center;
       position: relative;
-      padding: 300px;
+      padding: 15%;
       background-attachment: fixed;
     }
 
@@ -240,7 +240,7 @@
       background-size: cover;
       background-position: center;
       position: relative;
-      padding: 300px;
+      padding: 15%;
       background-attachment: fixed;
     }
 
